--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,6 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -fopenmp")
 find_package(eigen3 REQUIRED)
 include_directories("/usr/local/include/eigen3")
 
-set(SOURCE_FILES main.cpp src/FFNetwork.cpp include/FFNetwork.hpp src/dataReader.cpp include/dataReader.hpp include/Activations.hpp include/CostFunctions.hpp)
+set(SOURCE_FILES main.cpp src/FFNetwork.cpp include/FFNetwork.hpp src/dataReader.cpp include/dataReader.hpp include/Activations.hpp include/CostFunctions.hpp include/DropoutandRegularization.hpp)
 add_executable(NeuralNetworks ${SOURCE_FILES})
 target_link_libraries(NeuralNetworks gflags)
