--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,24 +13,6 @@ if(DOXYGEN_FOUND)
             )
 endif(DOXYGEN_FOUND)
 
-find_package(CUDA 7.0 REQUIRED)
-
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-    message("Debug mode")
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode;arch=compute_35,code=sm_35;
-            -gencode;arch=compute_52,code=sm_52;-gencode;arch=compute_50,code=compute_50;-std=c++11;-g;-lineinfo;-Xcompiler;-ggdb)
-else()
-    set(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS};-gencode;arch=compute_35,code=sm_35;
-            -gencode;arch=compute_52,code=sm_52;-gencode;arch=compute_50,code=compute_50;-std=c++11;-O3;-DNDEBUG;-Xcompiler;-DNDEBUG)
-endif()
-
-include_directories($ENV{CUDNN_PATH} $ENV{CUDNN_PATH}/include)
-link_directories($ENV{CUDNN_PATH})
-
-include_directories(kernels utility)
-
-link_directories()
-
 set(CMAKE_CXX_COMPILER /usr/local/bin/g++-6)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -47,12 +29,7 @@ set(SOURCE_FILES main.cpp
         include/Activations.hpp
         include/CostFunctions.hpp
         include/DropoutandRegularization.hpp
-#        src/cuFFNetwork.cu
-#        include/cuFFNetwork.h
 )
 
-cuda_add_executable(NeuralNetworks ${SOURCE_FILES})
-cuda_add_cublas_to_target(NeuralNetworks)
-
+add_executable(NeuralNetworks ${SOURCE_FILES})
 target_link_libraries(NeuralNetworks gflags)
-target_link_libraries(NeuralNetworks cudnn)
